--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ a:not([class]) {
     scroll-behavior: auto !important;
   }
 }
+.current-question {
+  background-color: red;
+}
+
 body {
   width: 100vw;
   height: 100vh;
@@ -87,6 +91,7 @@ body .game-window {
   background-color: #72757e;
   justify-content: space-around;
   align-items: center;
+  position: relative;
 }
 body .game-window .game-tittle {
   display: flex;
@@ -118,6 +123,24 @@ body .game-window .control-buttons {
   justify-content: center;
   font-size: 24px;
   cursor: pointer;
+}
+body .game-window .award-stages {
+  position: absolute;
+  height: 800px;
+  width: 200px;
+  background-color: black;
+  right: -200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+body .game-window .award-stages .stage {
+  width: 80%;
+  height: 40px;
+  background-color: white;
+  color: #010101;
+  text-align: center;
 }
 body .game-window .answers-container {
   width: 1199px;
