--- a/css/style.css
+++ b/css/style.css
@@ -81,83 +81,77 @@ body {
   background-color: #72757e;
   font-family: "Roboto", sans-serif;
   color: #fffffe;
+  background-color: #16161a;
 }
 body .game-window {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   width: 1199px;
-  height: 800px;
-  background-color: #72757e;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-}
-body .game-window .game-tittle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  width: 100%;
-  height: 60px;
-  margin-bottom: 50px;
-  background-color: #16161a;
-  border-radius: 20px 20px 0 0;
-  box-shadow: 2px 15px 28px 1px rgb(22, 22, 26);
-}
-body .game-window .question {
-  padding: 25px 10px;
-  font-size: 18px;
-  text-align: center;
-  height: 150px;
-  width: 100%;
+  height: 850px;
   overflow: hidden;
 }
-body .game-window .control-buttons {
-  width: 150px;
-  height: 75px;
-  border: 3px solid #010101;
-  border-radius: 20px;
+body .game-window .game-container {
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body .game-window .game-container .game-tittle {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
-  cursor: pointer;
+  width: 100%;
+  height: 10%;
+  font-size: 32px;
+  font-weight: bold;
 }
-body .game-window .award-stages {
-  position: absolute;
-  height: 800px;
-  width: 200px;
-  background-color: black;
-  right: -200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-body .game-window .award-stages .stage {
-  width: 80%;
-  height: 40px;
-  background-color: white;
-  color: #010101;
+body .game-window .game-container .question {
+  padding: 25px 10px;
   text-align: center;
+  height: 150px;
+  width: 90%;
+  height: 20%;
+  overflow: hidden;
+  background-color: #242629;
+  color: #94a1b2;
 }
-body .game-window .answers-container {
-  width: 1199px;
-  height: 440px;
+body .game-window .game-container .buttons-container {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+body .game-window .game-container .buttons-container .control-buttons {
+  width: 150px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #7f5af0;
+  border: none;
+  color: #fffffe;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  font-size: 16px;
+}
+body .game-window .game-container .buttons-container .control-buttons:hover {
+  opacity: 0.8;
+}
+body .game-window .game-container .answers-container {
+  width: 100%;
+  height: 60%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #16161a;
-  margin-top: 25px;
-  box-shadow: 2px -9px 28px 1px rgb(22, 22, 26);
 }
-body .game-window .answers-container .answer {
+body .game-window .game-container .answers-container .answer {
   width: 40%;
   height: 40%;
-  background-color: #72757e;
-  border-radius: 20px;
+  border: 3px solid #010101;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -165,6 +159,23 @@ body .game-window .answers-container .answer {
   transition: all 0.3s linear;
   cursor: pointer;
 }
-body .game-window .answers-container .answer:hover {
+body .game-window .game-container .answers-container .answer:hover {
   background-color: #7f5af0;
+}
+body .game-window .award-stages {
+  height: 100%;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+body .game-window .award-stages .stage {
+  width: 100%;
+  height: 50px;
+  color: #fffffe;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #010101;
 }/*# sourceMappingURL=style.css.map */
