--- a/sass/style.scss
+++ b/sass/style.scss
@@ -79,89 +79,101 @@ body {
 	background-color: #72757e;
 	font-family: 'Roboto', sans-serif;
 	color: #fffffe;
+	background-color: #16161a;
 	.game-window {
 		display: flex;
 		flex-direction: row;
-		flex-wrap: wrap;
 		width: 1199px;
-		height: 800px;
-		background-color: #72757e;
-		justify-content: space-around;
-		align-items: center;
-		position: relative;
-		.game-tittle {
+		height: 850px;
+		overflow: hidden;
+		.game-container {
+			width: 90%;
+			height: 100%;
 			display: flex;
-			align-items: center;
+			flex-direction: column;
 			justify-content: center;
-			font-size: 30px;
-			width: 100%;
-			height: 60px;
-			margin-bottom: 50px;
-			background-color: #16161a;
-			border-radius: 20px 20px 0 0;
-			box-shadow: 2px 15px 28px 1px rgba(22, 22, 26, 1);
-		}
-		.question {
-			padding: 25px 10px;
-			font-size: 18px;
-			text-align: center;
-			height: 150px;
-			width: 100%;
-			overflow: hidden;
-		}
-		.control-buttons {
-			width: 150px;
-			height: 75px;
-			border: 3px solid #010101;
-			border-radius: 20px;
-			display: flex;
 			align-items: center;
-			justify-content: center;
-			font-size: 24px;
-			cursor: pointer;
+			.game-tittle {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 100%;
+				height: 10%;
+				font-size: 32px;
+				font-weight: bold;
+			}
+			.question {
+				padding: 25px 10px;
+				text-align: center;
+				height: 150px;
+				width: 90%;
+				height: 20%;
+				overflow: hidden;
+				background-color: #242629;
+				color: #94a1b2;
+			}
+			.buttons-container {
+				width: 100%;
+				height: 10%;
+				display: flex;
+				justify-content: space-evenly;
+				align-items: center;
+				.control-buttons {
+					width: 150px;
+					height: 50px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					background-color: #7f5af0;
+					border: none;
+					color: #fffffe;
+					transition: all 0.3s ease-in-out;
+					cursor: pointer;
+					font-size: 16px;
+				}
+				.control-buttons:hover {
+					opacity: 0.8;
+				}
+			}
+
+			.answers-container {
+				width: 100%;
+				height: 60%;
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-evenly;
+				align-items: center;
+				.answer {
+					width: 40%;
+					height: 40%;
+					border: 3px solid #010101;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					text-align: center;
+					transition: all 0.3s linear;
+					cursor: pointer;
+				}
+				.answer:hover {
+					background-color: #7f5af0;
+				}
+			}
 		}
 		.award-stages {
-			position: absolute;
-			height: 800px;
-			width: 200px;
-			background-color: black;
-			right: -200px;
+			height: 100%;
+			width: 10%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: space-around;
 			.stage {
-				width: 80%;
-				height: 40px;
-				background-color: white;
-				color: #010101;
-				text-align: center;
-			}
-		}
-		.answers-container {
-			width: 1199px;
-			height: 440px;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-evenly;
-			align-items: center;
-			background-color: #16161a;
-			margin-top: 25px;
-			box-shadow: 2px -9px 28px 1px rgba(22, 22, 26, 1);
-			.answer {
-				width: 40%;
-				height: 40%;
-				background-color: #72757e;
-				border-radius: 20px;
+				width: 100%;
+				height: 50px;
+				color: #fffffe;
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				text-align: center;
-				transition: all 0.3s linear;
-				cursor: pointer;
-			}
-			.answer:hover {
-				background-color: #7f5af0;
+				border: 3px solid #010101;
 			}
 		}
 	}
