--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,6 @@ a:not([class]) {
     scroll-behavior: auto !important;
   }
 }
-.current-question {
-  background-color: red;
-}
-
 body {
   width: 100vw;
   height: 100vh;
@@ -82,6 +78,33 @@ body {
   font-family: "Roboto", sans-serif;
   color: #fffffe;
   background-color: #16161a;
+}
+body .pop-up {
+  position: absolute;
+  width: 1199px;
+  height: 850px;
+  background-color: #242629;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 300px;
+  row-gap: 20px;
+}
+body .pop-up .control-buttons {
+  width: 150px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #7f5af0;
+  border: none;
+  color: #fffffe;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  font-size: 16px;
+}
+body .pop-up .control-buttons:hover {
+  opacity: 0.8;
 }
 body .game-window {
   display: flex;
