--- a/sass/style.scss
+++ b/sass/style.scss
@@ -87,6 +87,7 @@ body {
 		align-items: center;
 		padding-top: 300px;
 		row-gap: 20px;
+		z-index: 10;
 		.control-buttons {
 			width: 150px;
 			height: 50px;
@@ -111,6 +112,7 @@ body {
 		width: 1199px;
 		height: 850px;
 		overflow: hidden;
+		z-index: 0;
 		.game-container {
 			width: 90%;
 			height: 100%;
