--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ body .pop-up {
   row-gap: 20px;
   z-index: 10;
 }
+body .pop-up .info-message {
+  font-size: 32px;
+  font-weight: bold;
+}
 body .pop-up .control-buttons {
   width: 150px;
   height: 50px;
